# this is probably not very elegant but I'm just using cmake to compile faster and I'm just trying to make it work
set(OpenGL_GL_PREFERENCE GLVND)
find_package(glfw3 3.3 REQUIRED)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
add_subdirectory(gfx)
add_subdirectory(world)
add_subdirectory(model)
add_subdirectory(player)
add_subdirectory(gui)
add_library(Minecraftlib window.cpp Game.cpp callbacks.cpp debug.cpp)
add_executable(Minecraft main.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Main")
target_link_libraries(Minecraft glfw)
target_link_libraries(Minecraft GL)
target_link_libraries(Minecraft GLEW::GLEW)
target_link_libraries(Minecraft m X11 pthread Xi Xrandr dl)
target_link_libraries(Minecraft Minecraftlib)
target_link_libraries(Minecraft GUI)
target_link_libraries(Minecraft Gfx)
target_link_libraries(Minecraft World)
target_link_libraries(Minecraft Model)
target_link_libraries(Minecraft Player)

target_include_directories(Minecraft PUBLIC "${PROJECT_SOURCE_DIR}/gfx")
target_include_directories(Minecraft PUBLIC "${PROJECT_SOURCE_DIR}/world")
target_include_directories(Minecraft PUBLIC "${PROJECT_SOURCE_DIR}/model")
target_include_directories(Minecraft PUBLIC "${PROJECT_SOURCE_DIR}/player")
